# cs521-project

./: .gitignore  .gitmodules  README.md
RTNeural-compare-x/: CMakeLists.txt  run_bench.sh
RTNeural-compare-x/results/: analyze_results.py  bench_eigen.txt  bench_eigen_approx.txt  bench_stl.txt  bench_stl_approx.txt  bench_xsimd.txt
RTNeural-compare-x/src/: benchmark.cpp  rtneural_layer.hpp
RTNeural-harness-x/: CMakeLists.txt  README.md
RTNeural-harness-x/res/ds/: lstm_conv_tf_12.json  lstm_tanh_12.json  lstm_tf_12.json  lstm_tf_8.json  tanh_3_256_tf.json
RTNeural-harness-x/src/: harness.cpp
RTNeural-train-x/: lstm.ipynb  prob_matmul.ipynb  requirements.txt
RTNeural-x/RTNeural/conv1d/: conv1d.h  conv1d_eigen.h
RTNeural-x/RTNeural/dense/: dense.h
RTNeural-x/RTNeural/maths/: maths_approx.h  maths_eigen.h  maths_stl.h
RTNeural-x/cmake/: ChooseBackend.cmake
rural/: Cargo.toml
rural/examples/: dense.rs  matmul-plots.rs  matmul.rs  perf-cnn.rs  plots.rs
rural/src/: activation.rs  conv.rs  lib.rs  math.rs  matrix.rs
rural/src/activation/: ktanh.rs  pade.rs  schraudolph.rs  schraudolph_ng.rs  spline.rs  taylor.rs
